# sugar

./: LICENSE  README.md
sugar31/: INSTALL  Makefile  README  aclocal.m4  config.h  config.h.in  config.status  configure  configure.in  make.inc  make.inc.in  sugar.h  sugar.h.in  sugar_init.m
sugar31/manual/: Makefile  architecture.tex  compiler.tex  describing.tex  example.tex  formal.tex  function-ref.tex  intro.tex  matlab.tex  process.tex  user.tex
sugar31/src/: Makefile
sugar31/src/c/: Makefile  affine.c  affine.h  assemble.c  assemble.h  assemble_mex.c  assemble_mex.h  assemblem.c  assemblem.h  assemblem_dense.c  assemblem_dense.h  assemblem_sparse.c  assemblem_sparse.h  dynarray.c  dynarray.h  dynarray_test.c  hash.c  hash.h  matrix_lua.c  matrix_lua.h  mempool.c  mempool.h  mesh.c  mesh.h  mesh_lua.c  mesh_lua.h  mesh_mex.c  mesh_mex.h  meshgen_lua.c  meshgen_lua.h  mex_handle.c  mex_handle.h  model_anchor.c  model_anchor.h  model_beam2d.c  model_beam2d.h  model_beam3d.c  model_beam3d.h  model_circuit.c  model_circuit.h  (+53 more)
sugar31/src/lua/: mumps.net  relpos.lua  std.net  std2.net  stdlib.net  subnetize.lua  xformstack.lua  xformtst.lua
sugar31/src/matlab/: MF_C.m  MF_Isrc.m  MF_Vsrc.m  MF_beam2d.m  MF_beam3d.m  MF_comb2d.m  MF_eground.m  MF_f2d.m  MF_gap2d.m  MF_gap2dforce.m  MF_gap3dforce.m  MF_opamp.m  MF_pos.m  MF_vcvs.m  beam_postpos.m  bode_mdk.m  cho_add_R.m  cho_add_dR.m  cho_add_displace.m  cho_addpath.m  cho_assemble_R.m  cho_assemble_R_full.m  cho_assemble_bc.m  cho_assemble_dR.m  cho_assemble_dR_sparse.m  cho_display.m  cho_dq_view.m  cho_draw_beam.m  cho_draw_mlab_beam.m  cho_load.m  cho_mdraw.m  cho_mesh_free.m  cho_mesh_get_param.m  cho_mesh_material_param.m  cho_mesh_nactive.m  cho_mesh_nelements.m  cho_mesh_nmaterials.m  cho_mesh_nnodes.m  cho_mesh_node.m  cho_mesh_node_lookup.m  (+27 more)
sugar31/src/nw/: Makefile  affine.nw  assemble-mex.nw  assemble.nw  assemblem-dense.nw  assemblem-sparse.nw  assemblem.nw  dynarray.nw  hash.nw  matrix-lua.nw  mempool.nw  mesh-lua.nw  mesh-mex.nw  mesh.nw  meshgen-lua.nw  mex-handle.nw  model-anchor.nw  model-beam2d.nw  model-beam3d.nw  model-circuit.nw  model-force.nw  model-gap.nw  model-matlab.nw  model-mf2wrap.nw  model-rigid.nw  model-test.nw  modelmgr.nw  netdraw-fltk.nw  netdraw-java.nw  netdraw-mex.nw  netdraw-mlab.nw  netdraw-xt.nw  netdraw.nw  netout-file.nw  netout-mex.nw  netout-mlab.nw  netout.nw  process-net.nw  relpos.nw  std-net.nw  (+11 more)
sugar31/tools/: Makefile
(+650 files in other folders)
